--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "debug": "nest start --debug --watch",
+    "start:migrate": "node dist/casey-migrations/migrate.js",
+    "start:migrate:prefill": "node dist/super-admin-migrations/migrate.js",
     "start:prod": "nest build && npm run start:migrate &&  node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -22,7 +24,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.4.0",
     "@nestjs/swagger": "^5.2.0",
     "class-transformer": "^0.5.1",
@@ -30,6 +34,7 @@
     "cookie-parser": "^1.4.6",
     "express-rate-limit": "^6.3.0",
     "helmet": "^5.0.2",
+    "mongoose": "^6.2.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
