[FLO-11]: added editor config

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
