--- a/package.json
+++ b/package.json
@@ -23,20 +23,40 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@nestjs-modules/mailer": "^1.6.1",
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^1.2.0",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/jwt": "^8.0.0",
         "@nestjs/mongoose": "^9.0.2",
+        "@nestjs/passport": "^8.2.1",
         "@nestjs/platform-express": "^8.4.0",
+        "@nestjs/schedule": "^1.0.2",
         "@nestjs/swagger": "^5.2.0",
+        "@types/mongoose-paginate": "^5.0.11",
+        "bcrypt": "^5.0.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "cookie-parser": "^1.4.6",
+        "crypto-js": "^4.1.1",
+        "cryptr": "^6.0.2",
+        "csvtojson": "^2.0.10",
+        "date-fns": "^2.28.0",
+        "dotenv": "^16.0.0",
         "express-rate-limit": "^6.3.0",
+        "fast-csv": "^4.3.6",
+        "handlebars": "^4.7.7",
         "helmet": "^5.0.2",
+        "image-hash": "^5.0.2",
         "migrate-mongoose": "^4.0.0",
         "mongoose": "^6.2.4",
+        "mongoose-paginate": "^5.0.3",
+        "passport": "^0.5.2",
+        "passport-jwt": "^4.0.0",
+        "path": "^0.12.7",
+        "pre-commit": "^1.2.2",
         "reflect-metadata": "^0.1.13",
+        "request-ip": "^2.1.3",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "swagger-ui-express": "^4.3.0"
