--- a/.env.sample
+++ b/.env.sample
@@ -30,4 +30,4 @@ API_VOLUME_MAPPING_CSV_TEMP=../psvolumes/flo-api/csv/temp:/usr/src/node-app/src/
 BC_CONNECTION_HOST=http://67.228.199.198:8051
 AUTHORIZATION_TOKEN=hkaudiqkasjkdhasjdhlahdll
 REFRESH_TOKEN_EXPIRATION_MIN=10080
-HTTP_TIMEOUT=5000
+ENCRYPT_SECRET_KEY=testsecretkey
