[FLO-26]: remove unused feature identified and mock data for super-admin

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ ENVIRONMENT=local
 MONGO_URI=mongodb://flo-db:27017
 MONGO_USERNAME=floapi
 MONGO_PASSWORD=a458CsBsa$osf3KYhiN!xrdF
-DATABASE_NAME=flo-db
+DATABASE_NAME=kilroy-base-api
 PORTS_MAP_MONGO=21011:27017
 MONGO_HOST=flo-db
 JWT_SECRET=8tS!QtTA69uP6nk*WG**pM6b
