[FLO-208] Updated CLIENT_APP_URL

--- a/.env.sample
+++ b/.env.sample
@@ -12,8 +12,7 @@ EMAIL=test@kilroyblockchain.com
 PASSWORD=@test123
 RESET_PASSWORD_SECRET=7H3eBAU%U4j^gJp@mN03Qnw2w
 API_URL=http://localhost:8848/api/v1
-CLIENT_APP_URL=http://localhost:4200/#
-CLIENT_ASSETS_URL=http://localhost:4200/
+CLIENT_APP_URL=http://localhost:4200
 SIGNUP_LIMIT = 100
 PAGE_VISIT_LIMIT = 1000
 RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3&eME
