--- a/.env.sample
+++ b/.env.sample
@@ -1,31 +1,41 @@
 ENVIRONMENT=local
-MONGO_URI=mongodb://flo-db:27017
+APP_PORT=3340
+APP_DEBUG_PORT=9230
+MONGO_EXPRESS_UI_PORT=3341
+MAILCATCHER_PORT=3342
+DB_PORT=27034
+
+MONGO_URI=mongodb://mongo:27017
+MONGO_HOST=mongo
 MONGO_USERNAME=floapi
 MONGO_PASSWORD=a458CsBsa$osf3KYhiN!xrdF
 DATABASE_NAME=kilroy-base-api
-PORTS_MAP_MONGO=21011:27017
-MONGO_HOST=flo-db
+MONGO_DEBUG=true
+
+LOCAL_CONTAINER_NAME=nest_api_local
+DEV_CONTAINER_NAME=nest_api_dev
+PROD_CONTAINER_NAME=nest_api_prod
+MONGODB_CONTAINER_NAME=mongodbFlo
+MONGO_EXPRESS_UI_CONTAINER_NAME=mongoExpressFlo
+MAILCATCHER_CONTAINER_NAME=mailcatcherFlo
+DATABASE_VOLUME_MOUNT=./psvolumes/flo-db
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=test@kilroyblockchain.com
+EMAIL_PASSWORD=12345
+
 JWT_SECRET=8tS!QtTA69uP6nk*WG**pM6b
 ENCRYPT_JWT_SECRET=oxRynN220cpFBi$FURvtj8kz
 JWT_EXPIRATION=1000m
-EMAIL=test@kilroyblockchain.com
-PASSWORD=@test123
 RESET_PASSWORD_SECRET=7H3eBAU%U4j^gJp@mN03Qnw2w
-API_URL=http://localhost:8848/api/v1
-CLIENT_APP_URL=http://localhost:4200
 SIGNUP_LIMIT = 100
 PAGE_VISIT_LIMIT = 1000
 RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3&eME
 #RE_CAPTCHA_STATUS=DISABLED
 RE_CAPTCHA_SECRET=6LcUDd8ZAAAAAPeXGuPqz5IU1sAFBzw1UiTcBH9e
 BLOCKCHAIN=DISABLED
-PORTS_MAP_API=8848:8848
-DB_VOLUME_MAPPING=../psvolumes/flo-db:/data/db
-API_VOLUME_MAPPING=./:/usr/src/node-app
-API_VOLUME_MAPPING_NODE_MODULES=./node_modules/:/usr/src/node-app/node_modules
-API_VOLUME_MAPPING_DIST=./dist/:/usr/src/node-app/dist
-API_VOLUME_MAPPING_UPLOADS=../psvolumes/flo-api/uploads:/usr/src/node-app/uploads
-API_VOLUME_MAPPING_CSV_TEMP=../psvolumes/flo-api/csv/temp:/usr/src/node-app/src/components/csv/temp
-BC_CONNECTION_HOST=http://67.228.199.198:8051
 AUTHORIZATION_TOKEN=hkaudiqkasjkdhasjdhlahdll
 REFRESH_TOKEN_EXPIRATION_MIN=10080
+
+CLIENT_APP_URL=http://localhost:4200/#
