[FLO-229]: .env file updated

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ DB_PORT=27034
 
 MONGO_URI=mongodb://mongo:27017
 MONGO_HOST=mongo
-MONGO_USERNAME=floapi
+MONGO_USERNAME=nestapi
 MONGO_PASSWORD=a458CsBsa$osf3KYhiN!xrdF
 DATABASE_NAME=kilroy-base-api
 MONGO_DEBUG=true
@@ -15,10 +15,10 @@ MONGO_DEBUG=true
 LOCAL_CONTAINER_NAME=nest_api_local
 DEV_CONTAINER_NAME=nest_api_dev
 PROD_CONTAINER_NAME=nest_api_prod
-MONGODB_CONTAINER_NAME=mongodbFlo
-MONGO_EXPRESS_UI_CONTAINER_NAME=mongoExpressFlo
-MAILCATCHER_CONTAINER_NAME=mailcatcherFlo
-DATABASE_VOLUME_MOUNT=./psvolumes/flo-db
+MONGODB_CONTAINER_NAME=mongodbNest
+MONGO_EXPRESS_UI_CONTAINER_NAME=mongoExpressNest
+MAILCATCHER_CONTAINER_NAME=mailcatcherNest
+DATABASE_VOLUME_MOUNT=./psvolumes/nest-db
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
