--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "migrate-mongoose": "^4.0.0",
         "mongoose": "^6.2.4",
         "mongoose-paginate": "^5.0.3",
+        "nest-winston": "^1.6.2",
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "path": "^0.12.7",
@@ -61,7 +62,9 @@
         "request-ip": "^2.1.3",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
-        "swagger-ui-express": "^4.3.0"
+        "swagger-ui-express": "^4.3.0",
+        "winston": "^3.7.2",
+        "winston-daily-rotate-file": "^4.6.1"
     },
     "pre-commit": [
         "lint"
