--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "date-fns": "^2.28.0",
         "dotenv": "^16.0.0",
         "express-rate-limit": "^6.3.0",
+        "fast-safe-stringify": "^2.1.1",
         "handlebars": "^4.7.7",
         "helmet": "^5.0.2",
         "image-hash": "^5.0.2",
