--- a/.env.sample
+++ b/.env.sample
@@ -39,3 +39,10 @@ AUTHORIZATION_TOKEN=hkaudiqkasjkdhasjdhlahdll
 REFRESH_TOKEN_EXPIRATION_MIN=10080
 
 CLIENT_APP_URL=http://localhost:4200/#
+
+# Application log transported to file settings
+NO_APP_LOG_T_FILE= # Add any string to disable application log that is transported to file
+APP_LOG_ZIPPED_ARCHIVE=true # Pass true | false value
+APP_LOG_DATE_PATTERN=YYYY-MM-DD-HH
+APP_LOG_MAX_SIZE=20m
+APP_LOG_MAX_FILES=14d
