--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^1.2.0",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/event-emitter": "^1.1.1",
         "@nestjs/jwt": "^8.0.0",
         "@nestjs/mongoose": "^9.0.2",
         "@nestjs/passport": "^8.2.1",
