[KT-3]: Updated project package for branch validation, updated AppResponse to AppResponseDto and added example in AppResponseDto

--- a/.env.sample
+++ b/.env.sample
@@ -20,10 +20,17 @@ MONGO_EXPRESS_UI_CONTAINER_NAME=mongoExpressNest
 MAILCATCHER_CONTAINER_NAME=mailcatcherNest
 DATABASE_VOLUME_MOUNT=./psvolumes/nest-db
 
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=test@kilroyblockchain.com
-EMAIL_PASSWORD=12345
+# for mailcatcher default port is 1025
+EMAIL_HOST=mailcatcherNest
+EMAIL_PORT=1025
+EMAIL_USER=
+EMAIL_PASSWORD=
+
+# for gmail default port is 1025
+#EMAIL_HOST=smtp.gmail.com
+#EMAIL_PORT=587
+#EMAIL_USER=test@kilroyblockchain.com
+#EMAIL_PASSWORD=12345
 
 JWT_SECRET=8tS!QtTA69uP6nk*WG**pM6b
 ENCRYPT_JWT_SECRET=oxRynN220cpFBi$FURvtj8kz
