--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "cryptr": "^6.0.2",
         "date-fns": "^2.28.0",
         "dotenv": "^16.0.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "express-rate-limit": "^6.3.0",
         "fast-safe-stringify": "^2.1.1",
         "handlebars": "^4.7.7",
