[KT-9]: Updated hardcoded mongo - container name to user defined container name from env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
             - ${MONGO_EXPRESS_UI_PORT}:8081
         environment:
             ME_CONFIG_OPTIONS_EDITORTHEME: 'ambiance'
-            ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@mongo:27017/
+            ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGODB_CONTAINER_NAME}:27017/
         links:
             - mongo
 
