[KT-13]: Updated CLIENT_APP_URL in sample since # is represented as comment in .env file

--- a/.env.sample
+++ b/.env.sample
@@ -46,7 +46,7 @@ BLOCKCHAIN=DISABLED
 AUTHORIZATION_TOKEN=hkaudiqkasjkdhasjdhlahdll
 REFRESH_TOKEN_EXPIRATION_MIN=10080
 
-CLIENT_APP_URL=http://localhost:4200/#
+CLIENT_APP_URL=http://localhost:4200
 
 # Application log transported to file settings
 NO_APP_LOG_T_FILE= # Add any string to disable application log that is transported to file
