[BB-73]: added migration for bc node info

--- a/.env.sample
+++ b/.env.sample
@@ -39,7 +39,8 @@ JWT_EXPIRATION=1000m
 RESET_PASSWORD_SECRET=7H3eBAU%U4j^gJp@mN03Qnw2w
 SIGNUP_LIMIT = 100
 PAGE_VISIT_LIMIT = 1000
-RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3&eME
+RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3 &
+eME
 #RE_CAPTCHA_STATUS=DISABLED
 RE_CAPTCHA_SECRET=6LcUDd8ZAAAAAPeXGuPqz5IU1sAFBzw1UiTcBH9e
 BLOCKCHAIN=DISABLED
@@ -49,8 +50,15 @@ REFRESH_TOKEN_EXPIRATION_MIN=10080
 CLIENT_APP_URL=http://localhost:4200
 
 # Application log transported to file settings
-NO_APP_LOG_T_FILE= # Add any string to disable application log that is transported to file
+NO_APP_LOG_T_FILE=           # Add any string to disable application log that is transported to file
 APP_LOG_ZIPPED_ARCHIVE=false # Pass true | false value
 APP_LOG_DATE_PATTERN=YYYY-MM-DD
 APP_LOG_MAX_SIZE=20m
 APP_LOG_MAX_FILES=14d
+
+# Default Super Admin Blockchain data
+SUPER_ADMIN_BUCKET_URL=
+BC_NODE_ORG_NAME=
+BC_NODE_LABEL=
+BC_NODE_URL=
+BC_NODE_AUTHORIZATION=
