[BB-163]: update docker file with optimize/update docker-compose file and refactor docker-compose files according to server mode/ update and refactor .env-sample file according to server mode/ create script file for deployment of server and refactor all script files/ update app-env-validation file with new validation/remove unnecessary pre-commit from dependencies and install on devDependencies/update migration file with updated mongodb connection configuration

--- a/env-samples/.env.demo.sample
+++ b/env-samples/.env.demo.sample
@@ -1,37 +1,28 @@
-ENVIRONMENT=local
-APP_NAME=App
+NODE_ENV=production
+ENVIRONMENT=prod
+
+APP_NAME=BTA
+
 APP_PORT=3340
-APP_DEBUG_PORT=9230
-MONGO_EXPRESS_UI_PORT=3341
 MAILCATCHER_PORT=3342
-DB_PORT=27034
 
-MONGO_URI=mongodb://mongodbNest:27017
-MONGO_HOST=mongodbNest
-MONGO_USERNAME=nestapi
-MONGO_PASSWORD=a458CsBsa$osf3KYhiN!xrdF
+MONGO_URI=mongodb://bta-db:27017
+MONGO_HOST=bta-db
+MONGO_USERNAME=btaapi
+MONGO_PASSWORD=a458CsBsaosf3KYhiNxrdF
 DATABASE_NAME=kilroy-base-api
-MONGO_DEBUG=true
+MONGO_DEBUG=false
 
-LOCAL_CONTAINER_NAME=nest_api_local
-DEV_CONTAINER_NAME=nest_api_dev
-PROD_CONTAINER_NAME=nest_api_prod
-MONGODB_CONTAINER_NAME=mongodbNest
-MONGO_EXPRESS_UI_CONTAINER_NAME=mongoExpressNest
-MAILCATCHER_CONTAINER_NAME=mailcatcherNest
-DATABASE_VOLUME_MOUNT=./psvolumes/nest-db
+APP_CONTAINER_NAME=bta_api_local
+MONGODB_CONTAINER_NAME=bta-db
+MAILCATCHER_CONTAINER_NAME=mailcatcherBta
+DATABASE_VOLUME_MOUNT=./psvolumes/bta-db
 
 # for mailcatcher default port is 1025
-EMAIL_HOST=mailcatcherNest
+EMAIL_HOST=mailcatcherBta
 EMAIL_PORT=1025
 EMAIL_USER=
 EMAIL_PASSWORD=
-
-# for gmail default port is 1025
-#EMAIL_HOST=smtp.gmail.com
-#EMAIL_PORT=587
-#EMAIL_USER=test@kilroyblockchain.com
-#EMAIL_PASSWORD=12345
 
 JWT_SECRET=8tS!QtTA69uP6nk*WG**pM6b
 ENCRYPT_JWT_SECRET=oxRynN220cpFBi$FURvtj8kz
@@ -40,9 +31,9 @@ RESET_PASSWORD_SECRET=7H3eBAU%U4j^gJp@mN03Qnw2w
 SIGNUP_LIMIT = 100
 PAGE_VISIT_LIMIT = 1000
 RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3&eME
-#RE_CAPTCHA_STATUS=DISABLED
+RE_CAPTCHA_STATUS=ENABLED
 RE_CAPTCHA_SECRET=6LcUDd8ZAAAAAPeXGuPqz5IU1sAFBzw1UiTcBH9e
-BLOCKCHAIN=DISABLED
+BLOCKCHAIN=ENABLED
 AUTHORIZATION_TOKEN=hkaudiqkasjkdhasjdhlahdll
 REFRESH_TOKEN_EXPIRATION_MIN=10080
 
@@ -54,6 +45,7 @@ APP_LOG_ZIPPED_ARCHIVE=false # Pass true | false value
 APP_LOG_DATE_PATTERN=YYYY-MM-DD
 APP_LOG_MAX_SIZE=20m
 APP_LOG_MAX_FILES=14d
+
 
 # Default Super Admin Blockchain data
 BC_NODE_ORG_NAME=PeerFusionerMainnetBtaKilroy
