--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,24 @@
 version: '3.8'
 services:
-    local:
-        container_name: ${LOCAL_CONTAINER_NAME}
-        image: nestjs-api-dev:1.0.0
+    app:
+        container_name: ${APP_CONTAINER_NAME}
         build:
             context: .
-            target: development
-        command: npm run start:debug
         ports:
             - ${APP_PORT}:3000
-            - ${APP_DEBUG_PORT}:9229
-        volumes:
-            - .:/usr/src/app
-            - ./node_modules:/usr/src/app/node_modules
-            - ./dist:/usr/src/app/dist
         restart: unless-stopped
         links:
             - mongo
-            - mongoExpress
-            - mailcatcher
-
-    dev:
-        container_name: ${DEV_CONTAINER_NAME}
-        image: nestjs-api-dev:1.0.0
-        build:
-            context: .
-            target: production
-        command: npm run start:prod
-        ports:
-            - ${APP_PORT}:3000
-            - ${APP_DEBUG_PORT}:9229
-        volumes:
-            - .:/usr/src/app
-            - ./node_modules:/usr/src/app/node_modules
-            - ./dist:/usr/src/app/dist
-        restart: unless-stopped
-        links:
+        depends_on:
             - mongo
-            - mailcatcher
-
-    prod:
-        container_name: ${PROD_CONTAINER_NAME}
-        image: nestjs-api-dev:1.0.0
-        build:
-            context: .
-            target: production
-        command: npm run start:prod
-        ports:
-            - ${APP_PORT}:3000
-        volumes:
-            - .:/usr/src/app
-            - ./node_modules:/usr/src/app/node_modules
-            - ./dist:/usr/src/app/dist
-        restart: unless-stopped
-        links:
-            - mongo
-
     mongo:
         image: mongo:latest
         container_name: ${MONGODB_CONTAINER_NAME}
-        ports:
-            - ${DB_PORT}:27017
         environment:
             - MONGO_INITDB_DATABASE=${DATABASE_NAME}
             - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
             - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
         volumes:
             - ${DATABASE_VOLUME_MOUNT}:/data/db
-        command: [--auth]
-
-    mongoExpress:
-        image: mongo-express
-        container_name: ${MONGO_EXPRESS_UI_CONTAINER_NAME}
-        ports:
-            - ${MONGO_EXPRESS_UI_PORT}:8081
-        environment:
-            ME_CONFIG_OPTIONS_EDITORTHEME: 'ambiance'
-            ME_CONFIG_MONGODB_URL: mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGODB_CONTAINER_NAME}:27017/
-        links:
-            - mongo
-
-    mailcatcher:
-        image: sj26/mailcatcher
-        container_name: ${MAILCATCHER_CONTAINER_NAME}
-        ports:
-            - ${MAILCATCHER_PORT}:1080
+        restart: unless-stopped
+        command: [ --auth ]
