--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start:debug": "nest start --debug --watch",
         "start:migrate": "node dist/app-migrations/migrate.js",
         "start:migrate:prefill": "node dist/super-admin-migrations/migrate.js",
-        "start:prod": "nest build && npm run start:migrate &&  node dist/src/main",
+        "start:prod": "npm run start:migrate &&  node dist/src/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
@@ -60,7 +60,6 @@
         "passport": "^0.5.2",
         "passport-jwt": "^4.0.0",
         "path": "^0.12.7",
-        "pre-commit": "^1.2.2",
         "reflect-metadata": "^0.1.13",
         "request-ip": "^2.1.3",
         "rimraf": "^3.0.2",
@@ -89,6 +88,7 @@
         "husky": "^7.0.4",
         "jest": "^27.2.5",
         "jira-prepare-commit-msg": "^1.6.2",
+        "pre-commit": "^1.2.2",
         "prettier": "^2.5.1",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
