[BB-163]: change docker-compose to latest docker compose and update app-env-validation

--- a/env-samples/.env.local.sample
+++ b/env-samples/.env.local.sample
@@ -11,7 +11,7 @@ DB_PORT=27034
 MONGO_URI=mongodb://bta-db:27017
 MONGO_HOST=bta-db
 MONGO_USERNAME=btaapi
-MONGO_PASSWORD=a458CsBsa$osf3KYhiN!xrdF
+MONGO_PASSWORD=a458CsBsaosf3KYhiNxrdF
 DATABASE_NAME=kilroy-base-api
 MONGO_DEBUG=true
 
@@ -40,8 +40,8 @@ JWT_SECRET=8tS!QtTA69uP6nk*WG**pM6b
 ENCRYPT_JWT_SECRET=oxRynN220cpFBi$FURvtj8kz
 JWT_EXPIRATION=1000m
 RESET_PASSWORD_SECRET=7H3eBAU%U4j^gJp@mN03Qnw2w
-SIGNUP_LIMIT = 100
-PAGE_VISIT_LIMIT = 1000
+SIGNUP_LIMIT=100
+PAGE_VISIT_LIMIT=1000
 RESET_WRONG_PASSWORD_BLOCK_TOKEN=dYsyq9K4x9TCcRh5C#N3r?yTSS@3&eME
 RE_CAPTCHA_STATUS=ENABLED
 RE_CAPTCHA_SECRET=6LcUDd8ZAAAAAPeXGuPqz5IU1sAFBzw1UiTcBH9e
