[BB-172]: update docker file and compose file for sovle issue on sending mail issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
         ports:
             - ${APP_PORT}:3000
         restart: unless-stopped
+        volumes:
+            - ./uploads:/usr/app/uploads:rw
         links:
             - mongo
         depends_on:
