--- a/env-samples/.env.demo.sample
+++ b/env-samples/.env.demo.sample
@@ -44,6 +44,10 @@ APP_LOG_DATE_PATTERN=YYYY-MM-DD
 APP_LOG_MAX_SIZE=20m
 APP_LOG_MAX_FILES=14d
 
+# id -u
+USER_ID=1000
+# id -g
+GROUP_ID=1000
 
 # Default Super Admin Blockchain data
 BC_NODE_ORG_NAME=PeerFusionerMainnetBtaKilroy
