[BB-172]: added USER_ID and GROUP_ID in docker compose file and .env-samples and docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - ${APP_PORT}:3000
         restart: unless-stopped
         volumes:
+            - .env:/usr/app/.env:r
             - ./uploads:/usr/app/uploads:rw
         links:
             - mongo
