--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start:debug": "nest start --debug --watch",
         "start:migrate": "node dist/app-migrations/migrate.js",
         "start:migrate:prefill": "node dist/super-admin-migrations/migrate.js",
+        "start:migrate:data-fix": "node dist/data-fix/migrate.js",
         "start:prod": "npm run start:migrate &&  node dist/src/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
