update MONGO_PASSWORD remove @ symbol

--- a/env-samples/.env.local.sample
+++ b/env-samples/.env.local.sample
@@ -11,7 +11,7 @@ DB_PORT=27034
 MONGO_URI=mongodb://bta-db:27017
 MONGO_HOST=bta-db
 MONGO_USERNAME=btaapi
-MONGO_PASSWORD=password@mongodb
+MONGO_PASSWORD=a458CsBsaosf3KYhiNxrdF
 DATABASE_NAME=kilroy-bta-api
 MONGO_DEBUG=true
 
